fix: pull to refresh on mobile (#407)
fix: get rid of weird bounce in pull-to-refresh

save displayFeed in local storage to persist between drag refresh

fix: qr modal sizing

--- a/web/src/ui/components/MessageModal/MessageModal.scss
+++ b/web/src/ui/components/MessageModal/MessageModal.scss
@@ -4,9 +4,13 @@
     .modal.modal-blur.fade.show {
         padding-right: 15px;
         display: block;
-        top: 33vmin;
-        left: 0;
-        right: 0;
+        // top: 10vmin;
+        // left: 0;
+        // right: 0;
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
     }
 
     .modal-dialog .modal-content {
@@ -14,9 +18,13 @@
         border: none;
         padding: 15px;
         padding-top: 25px;
+        padding-left: 10vmin;
+        padding-right: 10vmin;
         color: $body-bg-dark;
         background-color: #f7d68e;
         text-align: center;
+        max-width: 80vmin;
+        max-height: 90vmin;
     }
 
     .modal-content .modal-header {
