--- a/web/src/ui/pages/Home/Home.module.scss
+++ b/web/src/ui/pages/Home/Home.module.scss
@@ -1,9 +1,11 @@
 @import "../../../assets/main.scss";
 
 .homeContainer {
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-flow: column nowrap;
+    // overflow: hidden;
+    // border: 1px solid red;
 }
 
 .homepageWrapper {
@@ -15,11 +17,13 @@
     flex-flow: column nowrap;
     justify-content: flex-start;
     align-items: center;
+    // overflow: hidden;
 }
 
 .footer {
-    // flex: 0 1 auto;
+    // flex: 0 1 100%;
     width: 100%;
     height: 0;
-    // padding: 1.25rem;
+    padding: 1.25rem;
+    // bottom: 0;
 }
